Blender crashes when trying to use vertex selection masking on a copy directly after using SHIFT+d #35914

Closed
opened 2013-06-29 15:20:36 +02:00 by Gaia Clary · 6 comments
Member

%%%--- Operating System, Graphics card ---

windows 7 64 bit
nvidia titan

- Blender version with error, and version that worked ---

2.67 works
trunk broken

- Short description of error ---

Open the attached Blend file
select the object onlayer 2
Now Blender crashes when trying to enter Weight Paint mode and enable vertex selection masking

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

open Blender 2.67 or older

1.) Create a cube
2.) edit the cube
3.) Create a vertex Group and assign all verts to the group
4.) Select at least one of the verts
5.) enable X-Mirror
6.) step back to object mode
7.) Create a copy of the object using SHIFT +d
8.) still in object mode select the new copy
9.) switch to Weight Paint mode
10.) Enable vertex selection masking

Now Blender crashes because:

1.) me->totace > 0
2.) me->mselect = NULL
%%%

%%%--- Operating System, Graphics card --- windows 7 64 bit nvidia titan - Blender version with error, and version that worked --- 2.67 works trunk broken - Short description of error --- Open the attached Blend file select the object onlayer 2 Now Blender crashes when trying to enter Weight Paint mode and enable vertex selection masking - Steps for others to reproduce the error (preferably based on attached .blend file) --- open Blender 2.67 or older 1.) Create a cube 2.) edit the cube 3.) Create a vertex Group and assign all verts to the group 4.) Select at least one of the verts 5.) enable X-Mirror 6.) step back to object mode 7.) Create a copy of the object using SHIFT +d 8.) still in object mode select the new copy 9.) switch to Weight Paint mode 10.) Enable vertex selection masking Now Blender crashes because: 1.) me->totace > 0 2.) me->mselect = NULL %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%I could fix this problem by checking for me->totselect > 0 && me->mselect != NULL

int BKE_mesh_mselect_active_get(Mesh *me, int type)
{
BLI_assert(ELEM3(type, ME_VSEL, ME_ESEL, ME_FSEL));

/* XXX how can it be that sometimes me->mselect is NULL here ? 
   It happens, but its not clear why it happens! 
*/
if (me->totselect && me->mselect) {
	if (me->mselect[me->totselect - 1].type == type) {
		return me->mselect[me->totselect - 1].index;
	}
}
return -1;

}

However it may be better to solve this issue at a different place, maybe it makes more sense to ensure that mselect is set during loading the blend file or during entering vertex selection mask mode ?%%%

%%%I could fix this problem by checking for me->totselect > 0 && me->mselect != NULL int BKE_mesh_mselect_active_get(Mesh *me, int type) { BLI_assert(ELEM3(type, ME_VSEL, ME_ESEL, ME_FSEL)); /* XXX how can it be that sometimes me->mselect is NULL here ? It happens, but its not clear why it happens! */ if (me->totselect && me->mselect) { if (me->mselect[me->totselect - 1].type == type) { return me->mselect[me->totselect - 1].index; } } return -1; } However it may be better to solve this issue at a different place, maybe it makes more sense to ensure that mselect is set during loading the blend file or during entering vertex selection mask mode ?%%%
Author
Member

%%%I have found an easier way to get this problem and edited the original message.
It is not related to blender incompatibility, but it is directly related to the Copy step:

It looks like during SHIFT +d the mselect part is not created, but
BKE_mesh_mselect_active_get() expects this data to be up to date.%%%

%%%I have found an easier way to get this problem and edited the original message. It is not related to blender incompatibility, but it is directly related to the Copy step: It looks like during SHIFT +d the mselect part is not created, but BKE_mesh_mselect_active_get() expects this data to be up to date.%%%
Author
Member

%%%Here are 3 possible solutions to this:

1.) Set me->mtotselect to 0 on the created copy.
2.) just ensure that Weight Paint does not fall into the trap by checking that mselect != NULL
3.) copy the me->mselect array from the source object to the new copy.

So what is best ?%%%

%%%Here are 3 possible solutions to this: 1.) Set me->mtotselect to 0 on the created copy. 2.) just ensure that Weight Paint does not fall into the trap by checking that mselect != NULL 3.) copy the me->mselect array from the source object to the new copy. So what is best ?%%%

%%%me->mtotselect is now zero'd on load if the array is NULL.
But any new meshes copy the mselect array.

fixed r57888.
%%%

%%%me->mtotselect is now zero'd on load if the array is NULL. But any new meshes copy the mselect array. fixed r57888. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35914
No description provided.