fix [#35914] Blender crashes when trying to use vertex selection masking on a copy directly after using SHIFT+d